# ESP32_Control_Box

./: .codegraphignore  .gitignore  Cargo.toml  LICENSE  LICENSE.zh-CN.md  PC_API.md  README.md  SCREEN.md  TH-9800 面板通信协议逆向分析总结报告.md  build.rs  idf_component.yml  sdkconfig.defaults  test_pc_api.py  test_protocol.py  tinyusb_bindings.h
.cargo/: config.toml
assets/: README.md  web_config.html
calibrate/: Cargo.toml  README.md
calibrate/src/: main.rs
examples/elfradio-box/: Cargo.toml  README.md
examples/elfradio-box/.cargo/: config.toml
examples/elfradio-box/src/: audio.rs  cli.rs  config.rs  discovery.rs  firmware.rs  listen.rs  main.rs  monitor.rs  protocol.rs  serial_link.rs  state.rs  tts.rs  ui.rs
fuzzer/: Cargo.toml  README.md  sdkconfig.defaults
fuzzer/src/: main.rs
sim/: Cargo.toml  README.md
sim/.cargo/: config.toml
sim/src/: main.rs
src/: README.md  ble.rs  button.rs  discovery.rs  dns_server.rs  framebuf.rs  macro_engine.rs  main.rs  nvs_cfg.rs  pc_comm.rs  pc_tcp.rs  protocol.rs  rigctld.rs  softap.rs  state.rs  timesync.rs  uart.rs  ui.rs  web_config.rs  wifi.rs
tools/: README.md  esp32_dtrac_log_monitor.py  extract_logic_rows.py
