[package]
name = "elfradio-hwnode"
version = "0.1.0"
authors = ["x"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "elfradio-hwnode"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-hal = { version = "0.45", features = ["rmt-legacy"] }  # 启用旧版 RMT 驱动（关闭 WS2812B LED 用）
embedded-graphics = "0.8"       # 绘图库：画文字、矩形、圆等
profont = "0.7"                 # 高质量等宽字体 (7pt ~ 24pt)
heapless = "0.8"               # 嵌入式定长容器（无堆分配）

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
png = "0.17"                    # 编译时将 logo.png 转为 RGB565 嵌入固件

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_tinyusb", version = "1.4.2" }
bindings_header = "tinyusb_bindings.h"
